{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 37,
  "lineage": "c4997b28-a1cc-d000-43bf-314634bc9e31",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:766369807176:vpc/vpc-9906c3f3",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-303ce95b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-1813d672",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-9906c3f3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-20a3dc4a",
            "owner_id": "766369807176",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f6baa7f60cbfb007",
            "domain": "vpc",
            "id": "eipalloc-0fd9267937fd09974",
            "instance": "i-0bb36ef3b7543ef55",
            "network_interface": "eni-00430a84d8f195714",
            "private_dns": "ip-172-31-28-42.eu-central-1.compute.internal",
            "private_ip": "172.31.28.42",
            "public_dns": "ec2-18-192-177-252.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.177.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_kms_key.this",
            "data.aws_ami.amazon_linux",
            "data.aws_subnet_ids.all",
            "module.ec2.aws_instance.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-088ce6bc5daaa21d3",
            "mac_address": "02:5f:dc:57:e3:1e",
            "private_dns_name": "ip-172-31-28-13.eu-central-1.compute.internal",
            "private_ip": "172.31.28.13",
            "private_ips": [
              "172.31.28.13"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-b9570bdc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e238e64"
          },
          "dependencies": [
            "data.aws_subnet_ids.all"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0604621e15639f0b7",
            "arn": "arn:aws:ec2:eu-central-1:766369807176:instance/i-0bb36ef3b7543ef55",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-central-1:766369807176:key/3eccccd4-61a4-4d2a-8d93-2ab079aa8e6a",
                "volume_id": "vol-0b63988ce5767f8f5",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb36ef3b7543ef55",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00430a84d8f195714",
            "private_dns": "ip-172-31-28-42.eu-central-1.compute.internal",
            "private_ip": "172.31.28.42",
            "public_dns": "ec2-18-192-177-252.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.177.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c7e9bc485e269687",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "example-20200921083632942100000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e238e64",
            "tags": {
              "Env": "Private",
              "Location": "Secret",
              "Name": "example-normal"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "example-normal"
            },
            "vpc_security_group_ids": [
              "sg-0d63bddf94a182bb6"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_kms_key.this",
            "data.aws_ami.amazon_linux",
            "data.aws_subnet_ids.all",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:766369807176:security-group/sg-0d63bddf94a182bb6",
            "description": "Security group for example usage with EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d63bddf94a182bb6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All IPV4 ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana Dashboard",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "example-20200921083632942100000001",
            "name_prefix": "example-",
            "owner_id": "766369807176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-9906c3f3"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-4154069658",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d63bddf94a182bb6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3835148343",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d63bddf94a182bb6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-3755814209",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0d63bddf94a182bb6",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1377691010",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d63bddf94a182bb6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-3941284248",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d63bddf94a182bb6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Grafana Dashboard",
            "from_port": 3000,
            "id": "sgrule-2777379724",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d63bddf94a182bb6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}